[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CaptureArea/CaptureArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/851H-kktt_004.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.1
glow_blend_mode = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -10, 180 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 650, 180 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CaptureArea" parent="." instance=ExtResource( 2 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="UI" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="Time" type="Label" parent="UI"]
margin_right = 640.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Time:00.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_top = 37.0
margin_right = 640.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Score:0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="."]
z_index = -10
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -145, -190, -145, 529, 810, 526, 817, -189 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
